--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "author": "Rachit Patel",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "mongoose": "^7.0.3",
+    "mongoose-unique-validator": "^4.0.0",
+    "next": "^13.4.0",
     "node": "^19.8.1"
   },
   "devDependencies": {
